# InterCiter

./: .env.example  .gitignore  .nojekyll  0003-claude-opus-4.8-feedback.md  Makefile  README.md  _quarto.yml  about.html  about.qmd  docker-compose.dev.yml  docker-compose.yml  index.html  index.qmd  interciter-design-doc.docx  interciter-design-doc.qmd  interciter-systems-design.html  interciter-systems-design.md  search.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _ds_sizes.py  pyproject.toml
backend/interciter/: __init__.py  auth.py  cli.py  config.py  db.py  enums.py  ids.py  models.py  net.py  sample.py  schemas.py
backend/interciter/api/: __init__.py  app.py  deps.py  security.py
backend/interciter/data/: __init__.py
backend/interciter/datasets/: __init__.py  s2_bulk.py  store.py
backend/interciter/evaluation/: __init__.py  compare.py  gold.py  harness.py  metrics.py  report.py
backend/interciter/ingestion/: __init__.py  batch.py  crossref.py  extractor.py  llm_client.py  llm_extractor.py  parser.py  pipeline.py  pmc.py  reference_managers.py  robokop.py  (+2 more)
backend/tests/: conftest.py  helpers.py  test_alerts.py  test_api.py  test_auth.py  test_batch.py  test_bibliometrics.py  test_citation_stats.py  test_cohort.py  test_collections.py  test_discovery.py  test_evaluation.py  test_external_sources.py  test_graph.py  test_integrity.py  test_llm_extractor.py  test_local_enrichment.py  test_lookup.py  test_maps.py  test_parser.py  test_pipeline.py  test_pmc.py  test_report.py  test_search.py  test_session.py  test_snowball.py
(+152 files in other folders)
