[project]
name = "interciter"
version = "0.1.0"
description = "InterCiter MVP — provenance-first claim extraction and one-hop citation tracing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-4.0" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "defusedxml>=0.7.1",
    "python-multipart>=0.0.9",
    "truststore>=0.9",
    "certifi>=2024.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]
# Production serving: the PostgreSQL driver (system of record) so the same image can
# point INTERCITER_DATABASE_URL at a postgresql+psycopg URL instead of local SQLite.
prod = [
    "psycopg[binary]>=3.1",
]

[project.scripts]
interciter = "interciter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interciter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
